-- Create WarehouseDelayState type
CREATE TYPE WarehouseDelayState AS ENUM ('normal', 'pause', 'halfHour', 'anHour', 'impossible');

