@startuml fleet-tracker

entity User as "User" {
    + uid: varchar <<PK>>
    --
    user_name: varchar
    fcm_token_id: varchar
    created_at: timestamp
    updated_at: timestamp
}

entity LocalArea as "LocalArea" {
    + local_area_id: int <<PK>>
    --
    local_area_name: varchar
}

entity WarehouseArea as "WarehouseArea" {
    + warehouse_area_id: int <<PK>>
    --
    # local_area_id: int <<FK>>
    warehouse_area_name: varchar
    warehouse_area_latitude: numeric
    warehouse_area_longitude: numeric
    warehouse_area_radius: numeric
}

entity Warehouse as "Warehouse" {
    + warehouse_id: int <<PK>>
    --
    # warehouse_area_id: int <<FK>>
    warehouse_name: varchar
    warehouse_latitude: numeric
    warehouse_longitude: numeric
}

entity DelayInformation as "DelayInformation" {
    + delay_information_id: <<PK>>
    --
    # warehouse_id: int <<FK>>
    delay_state: WarehouseDelayState
    created_at: timestamp
    updated_at: timestamp
}

enum WarehouseDelayState {
  normal
  pause
  halfHour
  anHour
  impossible
}

entity Comment as "Comment" {
    + comment_id: int <<PK>>
    --
    # uid: varchar <<FK>>
    # warehouse_id: int <<FK>>
    contens: varchar
    created_at: timestamp
    updated_at: timestamp
}

"LocalArea" ||--o{ "WarehouseArea" : "one" LocalArea "has many" WarehouseArea
"WarehouseArea" ||--{ "Warehouse" : "one" WarehouseArea "has many" Warehouse
"Warehouse" ||--o{ "DelayInformation" : "one" Warehouse "has many" DelayInformation
"User" ||--o{ "Comment" : "one" User "has many" Comment
"Warehouse" ||--o{ "Comment" : "one" Warehouse "has many" Comment

@enduml